--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "IgorSouzaBezerra <igor.souza1.bezerra@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
@@ -29,7 +31,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.1",
     "prettier": "^2.3.0",
+    "ts-jest": "^27.0.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   }
