--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,9 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: Load Dependencies
+        run: yarn install
+
+      # Runs a single command using the runners shell
       - name: Run Tests
         run: yarn test
