(feat): add typeorm

--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "author": "IgorSouzaBezerra <igor.souza1.bezerra@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "test": "jest"
   },
   "dependencies": {
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.5.0",
+    "typeorm": "^0.2.34",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
